Refined minor spacing issues on media queries exercises

--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -105,24 +105,30 @@
         display: inline-block;
         float: left;
     }
+    .sub-section {
+        font-style: italic;
+    }
     footer {
         display: flex;
         width: 100%;
-        height: 100%;
+        height: 13em;
+        justify-content: flex-start;
     }
     p {
+        display: flex;
         flex-grow: 4;
+        align-items: flex-end;
     }
-    i {
-        float: right;
-        margin-right: 2em;
-        margin-left: 3em;
-        margin-top: 1.2em;
-        /*width: 100%;*/
-        /*height: 100%;*/
-        scale: 300%;
+    #social-media-links {
+        display: flex;
+        justify-content: space-between;
+        align-items: flex-end;
+        padding: 1em;
     }
     footer a {
         color: black;
+        padding-left: 2em;
+        padding-right: 2em;
+        scale: 200%;
     }
 }
